fix: display flash alert messages on login view

--- a/app/views/tables/index.html.erb
+++ b/app/views/tables/index.html.erb
@@ -12,7 +12,7 @@
              value="<%= @selected_date.to_s %>" 
              min="<%= @today_date.to_s %>"
              style="padding: 8px; font-size: 16px; border: 1px solid #ccc; border-radius: 4px;">
-      <input type="submit" value="Check Availability" class="btn-success">
+      <input type="submit" value="Check Availability" class="btn btn-success">
       <%= link_to "My Reservations", my_reservations_path, class: "btn btn-primary" %>
     </div>
   <% end %>
