Update: made thebackground color, borders, font, and button classes consistent.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,7 +48,7 @@ a:visited {
   color: #800080;
 }
 
-/* Global Button Shape (3D Retro) */
+/* Global Button Shape (3D Custom) */
 button,
 .btn,
 input[type="submit"],
